🤞💎 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ Requirements
 [  ] Three New Arrays
 [  ] One New Loop
 [  ] Custom Function
-[  ] Three new HTML elements/CSS Declarations
+[  ] Three new HTML elements
+[  ] Three new CSS Declarations
 
 Select ONE Additional 
 [ no ] Feature 1 - Array of Colors
@@ -27,7 +28,7 @@ Select ONE Additional
   <body>
     <div class="container">
       <div>
-        <h2 id="end">🍂🌼🌞⛄ | My Favorite Season</h2>
+        <h2 id="end">Having a Rough Day</h2>
         <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       </div>
     </div>
