🪢📅 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Select ONE Additional
   <body>
     <div class="container">
       <div>
-        <h2 id="end">Having a Rough Day</h2>
+        <center><h2 id="end">Having a Rough Day</h2></center>
         <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       </div>
     </div>
